--- a/python-data-structures/list.ipynb
+++ b/python-data-structures/list.ipynb
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 48,
    "id": "79292340",
    "metadata": {},
    "outputs": [
@@ -336,28 +336,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['four', 'one', 'three', 'two']\n",
-      "[1, 2, 3, 4, 5]\n",
-      "[3, 4, 2, 1, 5]\n",
-      "[5, 4, 3, 2, 1]\n"
+      "Sorted:  ['four', 'one', 'three', 'two']\n",
+      "Original:  ['one', 'two', 'three', 'four']\n"
      ]
     }
    ],
    "source": [
-    "# sorted(lst) : returns sorted list, but the original list is not changed\n",
-    "lst1 = ['one', 'two', 'three', 'four']\n",
-    "print(sorted(lst1))    # it will print after sorting alphabetically\n",
-    "lst2 = [3,4, 2, 1, 5]\n",
-    "print(sorted(lst2))\n",
-    "print(lst2)\n",
+    "# sorted(lst) : returns sorted list, but the original list remain unchanged\n",
     "\n",
-    "# sorted() takes an optional argument 'reverse' which has a default value 'false'\n",
-    "print(sorted(lst2, reverse = True))"
+    "lst1 = ['one', 'two', 'three', 'four']\n",
+    "print('Sorted: ',sorted(lst1))    # it will print after sorting alphabetically\n",
+    "print('Original: ', lst1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "c43e7a1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted:  [1, 2, 3, 4, 5]\n",
+      "Sorted in reverse order:  [5, 4, 3, 2, 1]\n",
+      "Original [3, 4, 2, 1, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sorted(list_name, reverse=True) takes an optional argument 'reverse' which has a default value 'false'\n",
+    "lst2 = [3,4, 2, 1, 5]\n",
+    "print('Sorted: ', sorted(lst2))\n",
+    "print('Sorted in reverse order: ', sorted(lst2, reverse = True))\n",
+    "print('Original', lst2)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "db07ca48",
+   "id": "8717cee7",
    "metadata": {},
    "source": [
     "## Keywords related to List"
@@ -424,6 +442,313 @@
     "else:\n",
     "          print('false')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48e89523",
+   "metadata": {},
+   "source": [
+    "### List having multiple references"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "366fabf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst1 = [1,2,3]\n",
+    "lst2 = lst1\n",
+    "lst2.append(4)    # modifies lst1 as well\n",
+    "print(lst1)\n",
+    "print(lst2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57edf9eb",
+   "metadata": {},
+   "source": [
+    "### Split string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "05df4c3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['one', 'two', 'three', 'four', 'five']\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1 = \"one,two,three,four,five\"\n",
+    "str1_lst = str1.split(',')    # creates a list of strings after splitting the string where ',' comes\n",
+    "print(str1_lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a4a4589",
+   "metadata": {},
+   "source": [
+    "### List Indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "208f085d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Indexing: Accesing elements of a list or any container using it's index\n",
+    "lst = [1,2,3,4,5]\n",
+    "print(lst[2])  # Print the element present at index 2 (i.e., the element at 3rd position as python follows 0 based indexing)\n",
+    "print(lst[-1]) # Print element present at 1st position from last"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00a23dcf",
+   "metadata": {},
+   "source": [
+    "### List slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f7d93506",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4]\n",
+      "[1, 3, 5]\n",
+      "[3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# slicing a list means accessing a segment of list\n",
+    "num = [1,2,3,4,5]\n",
+    "print(num[:])    # Print the elements from the start to the end\n",
+    "print(num[0:4])  # Print the elements from 1st element to 4th element\n",
+    "print(num[::2])  # Print alternate elements from start to end \n",
+    "print(num[2::2]) # Print alternate elements starting from 2nd index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "223438b7",
+   "metadata": {},
+   "source": [
+    "### Extending List using +"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a3365acd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 'Aditya', 'Anand', 'Sanskrit']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst1 = [1,2,3]\n",
+    "lst2 = ['Aditya', 'Anand', 'Sanskrit']\n",
+    "lst3 = lst1+lst2  # adds elements of lst1 and lst2 to lst3\n",
+    "print(lst3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "111735c8",
+   "metadata": {},
+   "source": [
+    "### count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "581bbac7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ram:  2\n",
+      "Shyam:  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lst.count(x) : returns the frequency of element 'x' in list 'lst'\n",
+    "lst = ['Ram', 'Shyam', 'Ghanshyam', 'Ram']\n",
+    "print('Ram: ',lst.count('Ram'))\n",
+    "print('Shyam: ',lst.count('Shyam'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8cf8838",
+   "metadata": {},
+   "source": [
+    "### List Traversal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "22abf93e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binod\n",
+      "Gajodhar\n",
+      "Mohan\n",
+      "Guddu\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Traversing : process of passing across, over, or through\n",
+    "lst = ['Binod', 'Gajodhar', 'Mohan', 'Guddu']\n",
+    "for x in lst: # Access the elements successively\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37028167",
+   "metadata": {},
+   "source": [
+    "### List Comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "f2e1f202",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n",
+      "[0, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A succinct way to create lists based on certain conditions\n",
+    "# range(start, stop, step) function return a range of elements, where start and step is optional and stop is not included\n",
+    "# range(5) returns 0,1,2,3,4\n",
+    "table2 = [ 2*x for x in range(1, 11)]\n",
+    "print(table2)\n",
+    "lst =[ele for ele in range(5)]\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "6d41346b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 53, 4, 6, 73, 8, 10, 12, 13, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# filter the list\n",
+    "lst = [-1,2,53,4,-5,6,73,8,-9,10,-81,12,13,-41,15]\n",
+    "lst_of_non_negative = [ele for ele in lst if ele>=0]\n",
+    "print(lst_of_non_negative)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b2922064",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "[(1, 1), (2, 4), (3, 9), (4, 16), (5, 25), (6, 36), (7, 49), (8, 64), (9, 81), (10, 100)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a list of tuples\n",
+    "lst = [x for x in range(1,11)]\n",
+    "print(lst)\n",
+    "sqr_lst = [(x, x**2) for x in lst]\n",
+    "print(sqr_lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be30e10d",
+   "metadata": {},
+   "source": [
+    "### Nested List Comprehensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93321d37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
