Nested List Comprehension

--- a/python-data-structures/list.ipynb
+++ b/python-data-structures/list.ipynb
@@ -744,11 +744,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "93321d37",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16, 36, 64, 100, 144, 196, 256, 324, 400]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Numbers = [[1,2,3,4,5,6,7,8,9,10],\n",
+    "          [11,12,13,14,15,16,17,18,19,20]]\n",
+    "# Task : create a list of squares of numbers which is even\n",
+    "\n",
+    "# Write the function to square the numbers that have passed the filter.\n",
+    "# Write a for loop iterating through all of the lists in Numbers.\n",
+    "# Write a for loop iterating through each number in the passed list.\n",
+    "# Write a condition passing the numbers that are even.\n",
+    "\n",
+    "Result = [number**2 for lst in Numbers for number in lst if number%2==0]\n",
+    "print(Result)"
+   ]
   }
  ],
  "metadata": {
